--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container">
         <div><h1>Stop Watch</h1>
             <!-- <p class="seconds">00</p>:<p class="miliseconds">00</p> -->
-    <p><span id="seconds">00</span>:<span id="miliseconds">00</span></p>
+    <p><span id="seconds">00</span>:<span id="milliseconds">00</span></p>
     <form>
-       <button id="start">Start</button>
-       <button id="stop">Stop</button>
-       <button id="Reset">Reset</button>
+       <button type="button" id="start">Start</button>
+       <button type="button" id="stop">Stop</button>
+       <button type="button" id="reset">Reset</button>
     </form>
     </div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
